--- a/client/app/views/map-listings.client.view.html
+++ b/client/app/views/map-listings.client.view.html
@@ -28,8 +28,7 @@
       <ui-gmap-markers models="listings" coords="'coordinates'" idkey="'_id'" icon="'icon'">
         <ui-gmap-windows show="show">
                 <div ng-non-bindable>
-                  <h3>{{name}}</h3>
-                  <p>Building Code: {{code}}</p>
+                  <h3>{{code}}: {{name}}</h3>
                   <p>{{address}}</p>
                 </div>
             </ui-gmap-windows>
